# weather-bot

./: .buildinfo  .gitignore  Pipfile  README.md  autodoc.html  document.env  dodo.py  genindex.html  index.html  main.py  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tests.py  tox.ini
.doctrees/: autodoc.doctree  environment.pickle  index.doctree
.github/workflows/: check.yaml  documentation.yaml
_sources/: autodoc.rst.txt
doc/: autodoc.rst  conf.py  index.rst
po/ru/LC_MESSAGES/: weth.mo  weth.po
src/: commands.py  main.py  utils.py
test/: tests.py
