[project]
name = "weather-bot"
version = "1.0"
readme = "doc/index.rst"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [
 {name = "Leonid Sidorov", email = "leon.sidorov@gmail.com"},
 {name = "Leonid Sidorov"},
 {name = "Alexander Sambursky"}
]

keywords = ["Telegram", "Bot", "project", "weather"]
classifiers = [
      "Development Status :: 5 - Production/Stable",
      "Framework :: python-telegram-bot",
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.urls]
repository = "https://github.com/Sidl419/weather-bot"

[build-system]
requires = ["Sphinx", "setuptools", "build", "doit", "pydocstyle"]
build-backend = "setuptools.build_meta"
